package com.learn.animation;

public enum Direction {
    RIGHT, LEFT, UP, DOWN
}
