package com.learn.animation;

public enum FlipDirection {
    HORIZONTAL, VERTICAL
}
