package com.learn.animation;

import javax.swing.*;

public interface GameObjectMethodsInterface {
    void update();
    void draw(JPanel jPanel);
}
