package com.learn.animation;

public class Main {
    public static void main(String[] args) {
        new GamePanel();
    }
}